@@ -19,6 +19,7 @@ S3method(Effect, gls)
 S3method(Effect, multinom)
 S3method(Effect, polr)
 S3method(Effect, poLCA)
+S3method(Effect, mlm)
 S3method(print, eff)
 S3method(print, efflist)
 S3method(print, summary.eff)
